--- a/src/app/shared/components/dae-datatable-header/dae-datatable-header.component.html
+++ b/src/app/shared/components/dae-datatable-header/dae-datatable-header.component.html
@@ -1,11 +1,11 @@
 <div class="header" fxLayout="row" fxLayoutAlign="start center">
-    <div class="title padding" i18n="">{{ title | translate }}</div>
+    <div class="title padding" i18n="">{{ title }}</div>
     <ng-container *ngIf="displayActionButton">
         <mat-divider [vertical]="true"></mat-divider><button class="padding" mat-button="mat-button" (click)="triggerActionCallback()"><i class="material-icons">{{ actionButtonIcon }}</i></button></ng-container>
     <ng-container *ngIf="displaySearchField">
         <mat-divider [vertical]="true"></mat-divider>
         <div class="padding" fxLayout="row" fxLayoutAlign="start center"><i class="material-icons right">search</i>
-            <mat-form-field><input matInput="matInput" i18n="" translate="translate" [(ngModel)]="searchModel" (keyup)="triggerSearchCallback()" [placeholder]="searchInputPlaceholder | translate" /></mat-form-field>
+            <mat-form-field><input matInput="matInput" i18n="" [(ngModel)]="searchModel" (keyup)="triggerSearchCallback()" [placeholder]="searchInputPlaceholder" /></mat-form-field>
         </div>
     </ng-container>
     <ng-container *ngIf="ngContentRef.children.length !== 0">
