--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,3 +4,7 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway');
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
+body {
+  font-family: Roboto,"Helvetica Neue",sans-serif;
+}
