--- a/src/app/shared/components/dae-dynamic-table/dialogs/filters/text-filter/text-filter.component.html
+++ b/src/app/shared/components/dae-dynamic-table/dialogs/filters/text-filter/text-filter.component.html
@@ -1,5 +1,5 @@
 <form (ngSubmit)="apply()">
-    <h2 mat-dialog-title>Filtrer par {{ displayName }}</h2>
+    <h2 mat-dialog-title>Filtrer par {{ displayName | lowercase }}</h2>
   
     <mat-dialog-content>
     
