--- a/src/app/shared/components/dae-dynamic-table/dynamic-table.component.html
+++ b/src/app/shared/components/dae-dynamic-table/dynamic-table.component.html
@@ -1,4 +1,4 @@
-<dae-datatable-header [title]="title+' ('+titleBadge+')'"
+<dae-datatable-header *ngIf="displayHeader" [title]="title+' ('+titleBadge+')'"
   [displayActionButton]="true"
   [actionButtonIcon]="'settings'"
   [displaySearchField]="displaySearchField"
@@ -21,30 +21,46 @@
     </div>
 </dae-datatable-header>
 
-<mat-table [dataSource]="dataSource" matSort matSortDirection="asc">
-  <ng-container *ngFor="let column of columns" matColumnDef="{{ column.name }}">
-    <mat-header-cell *matHeaderCellDef mat-sort-header="{{ column.name }}" [ngClass]="{'dae-select-cell' : column._class == 'select'}">
-      {{ column.description }}
-      <ng-container *ngIf="column._class == 'select'; else sortButton">
-        <mat-checkbox (change)="$event ? masterToggle() : null" [checked]="selection.hasValue() && isAllSelected()"></mat-checkbox>
+<mat-table [dataSource]="dataSource" matSort matSortDirection="asc" #table>
+  <ng-container *ngFor="let column of columns" matColumnDef="{{ column.tag }}">
+    <mat-header-cell *matHeaderCellDef mat-sort-header="{{ column.tag }}" [ngClass]="{'dae-select-cell' : column.type == 'select'}">
+      {{ column.localname }}
+      <ng-container *ngIf="column.type == 'select'; else sortButton">
+        <mat-checkbox color="primary" [disabled]="isLoading" (change)="$event ? masterToggle() : null" [checked]="selection.hasValue() && isAllSelected()"></mat-checkbox>
       </ng-container>
       <ng-template #sortButton>
         <button class="mat-sort-header-button" 
           *ngIf="showFilters && canFilter(column)"
           (click)="filter(column); $event.stopPropagation();"
-          matTooltip="{{ getFilterDescription(column) }}" 
+          matTooltip="{{ getFilterDescription(column) }}"
           matTooltipDisabled="{{ !getFilterDescription(column) }}">
           <mat-icon color="{{ isFiltered(column) ? 'primary' : 'default' }}">filter_list</mat-icon>
         </button>
       </ng-template>
     </mat-header-cell>
-    <mat-cell *matCellDef="let row" [ngClass]="{'dae-select-cell' : column._class == 'select'}">
-      <mdt-table-cell [selection]="selection" [row]="row" [column]="column" [modifyEnabled]="modifyEnabled" [deleteEnabled]="deleteEnabled" (selectElement)="select($event)" (modifyElement)="modify($event)" (deleteElement)="delete($event)"></mdt-table-cell>
+    <mat-cell *matCellDef="let row" [ngClass]="{'dae-select-cell' : column.type == 'select'}">
+      <mdt-table-cell 
+        [selection]="selection" 
+        [row]="row" 
+        [column]="column" 
+        [modifyEnabled]="modifyEnabled" 
+        [deleteEnabled]="deleteEnabled" 
+        (selectElement)="select($event)" 
+        (modifyElement)="modify($event)" 
+        (deleteElement)="delete($event)">
+      </mdt-table-cell>
     </mat-cell>
   </ng-container>
   <mat-header-row *matHeaderRowDef="displayedColumns;"></mat-header-row>
-  <mat-row *matRowDef="let row; columns: displayedColumns;" (click)="onRowClick(row)"></mat-row>
+  <mat-row *matRowDef="let row; columns: displayedColumns;" 
+    [ngClass]="{ 'disabled' : !!enablingAttribute && !row[enablingAttribute] }" 
+    (click)="onRowClick(row)">
+  </mat-row>
 </mat-table>
-<mat-paginator [showFirstLastButtons]="true" [hidden]="!isUsingInternalPaginator()" [pageSize]="pageSize" [pageSizeOptions]="pageSizeOptions">
+<mat-progress-bar *ngIf="isLoading" mode="indeterminate"></mat-progress-bar>
+<mat-paginator [showFirstLastButtons]="true" 
+  [hidden]="!isUsingInternalPaginator()" 
+  [pageSize]="pageSize" 
+  [pageSizeOptions]="pageSizeOptions">
 </mat-paginator>
 
