Added list and array cells

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,7 @@
     [title]="'Personnes'"
     [columns$]="columns$"
     [dataSource$]="people$"
+    [lists]="lists$ | async"
     [selectionEnabled]="true"
     [modifyEnabled]="true"
     [deleteEnabled]="true"
