--- a/src/app/shared/components/dae-dynamic-form/question/dynamic-form-question.component.html
+++ b/src/app/shared/components/dae-dynamic-form/question/dynamic-form-question.component.html
@@ -3,7 +3,7 @@
     <div [ngSwitch]="question.controlType">
   
       <mat-form-field *ngSwitchCase="'textbox'">
-        <input matInput [placeholder]="question.label" 
+        <input matInput [placeholder]="question.label | translate"
           [id]="question.key" [type]="question.type" [formControlName]="question.key">
       </mat-form-field>
 
