--- a/src/app/shared/components/dae-dynamic-table/dynamic-table.component.scss
+++ b/src/app/shared/components/dae-dynamic-table/dynamic-table.component.scss
@@ -53,6 +53,7 @@ th .mat-icon.mat-default:hover {
 ::ng-deep .array-cell-item-list {
     padding-left: 16px!important;
     margin: 0px!important;
+    list-style-type: square;
 }
 
 ::ng-deep .text-cell-link {
