--- a/src/app/shared/components/dae-dynamic-form/dynamic-form.component.html
+++ b/src/app/shared/components/dae-dynamic-form/dynamic-form.component.html
@@ -6,8 +6,8 @@
     </div>
 
     <div class="form-row">
-      <button mat-button type="submit" [disabled]="!form.valid">Save</button>
-      <button *ngIf="isDialog" mat-button type="button" (click)="onCancel()">Cancel</button>
+      <button mat-button type="submit" [disabled]="!form.valid">Sauvegarder</button>
+      <button *ngIf="isDialog" mat-button type="button" (click)="onCancel()">Annuler</button>
     </div>
   </form>
 </div>
